--- a/CleaningApplication/Web.config
+++ b/CleaningApplication/Web.config
@@ -9,31 +9,30 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
-      <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-    </appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
   <connectionStrings>
     <add name="dbcleaningConnectionString" connectionString="Data Source=aago001;Initial Catalog=dbcleaning;Integrated Security=True" providerName="System.Data.SqlClient" />
-  
   </connectionStrings>
   <system.web>
     <customErrors defaultRedirect="ErrorPage.aspx" mode="Off" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
-    
-  <pages>
+    <pages>
       <controls>
         <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit" />
       </controls>
-    </pages></system.web>
+    </pages>
+  </system.web>
   <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
       </parameters>
     </defaultConnectionFactory>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
   </entityFramework>
   <system.codedom>
     <compilers>
