just commiting before payment pages

--- a/CleaningApplication/Web.config
+++ b/CleaningApplication/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+    <add key="StripeAPIKey" value="sk_test_pIYbtWhnmPXVPinFewqNXZ5K00VWc3dxDC"/>
   </appSettings>
   <connectionStrings>
     <add name="dbcleaningConnectionString" connectionString="Data Source=aago001;Initial Catalog=dbcleaning;Integrated Security=True" providerName="System.Data.SqlClient" />
