--- a/CleaningApplication/packages.config
+++ b/CleaningApplication/packages.config
@@ -3,4 +3,7 @@
   <package id="AjaxControlToolkit" version="19.1.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.3.0-preview7-19363-02" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="RestSharp" version="105.0.1" targetFramework="net461" />
+  <package id="Stripe.net" version="28.8.0" targetFramework="net461" />
 </packages>
