--- a/CleaningApplication/CleaningApplication.csproj
+++ b/CleaningApplication/CleaningApplication.csproj
@@ -46,16 +46,37 @@
     <Reference Include="AjaxControlToolkit, Version=19.1.0.0, Culture=neutral, PublicKeyToken=28f01b0e84b6d53e, processorArchitecture=MSIL">
       <HintPath>..\packages\AjaxControlToolkit.19.1.0\lib\net40\AjaxControlToolkit.dll</HintPath>
     </Reference>
+    <Reference Include="BouncyCastle.Crypto, Version=1.8.5.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
+      <HintPath>..\packages\BouncyCastle.1.8.5\lib\BouncyCastle.Crypto.dll</HintPath>
+    </Reference>
+    <Reference Include="byMarc.Net2.WinControls.ToolStrip.Controls, Version=1.0.6432.20130, Culture=neutral, PublicKeyToken=5ee42ada736ab19b, processorArchitecture=MSIL">
+      <HintPath>..\packages\byMarc.Net2.WinControls.ToolStrip.Controls.2017.811.0\lib\net20\byMarc.Net2.WinControls.ToolStrip.Controls.dll</HintPath>
+    </Reference>
+    <Reference Include="byMarc.Net2.WinLibrary.ToolStrip.ThreadSafe, Version=1.0.0.0, Culture=neutral, PublicKeyToken=5ee42ada736ab19b, processorArchitecture=MSIL">
+      <HintPath>..\packages\byMarc.Net2.WinLibrary.ToolStrip.ThreadSafe.2017.818.0\lib\net20\byMarc.Net2.WinLibrary.ToolStrip.ThreadSafe.dll</HintPath>
+    </Reference>
+    <Reference Include="DllImportX, Version=0.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DllImportX.0.0.1\lib\net35\DllImportX.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.3.0-preview7-19363-02\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.3.0-preview7-19363-02\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="HtmlAgilityPack, Version=1.11.15.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>..\packages\HtmlAgilityPack.1.11.15\lib\Net45\HtmlAgilityPack.dll</HintPath>
+    </Reference>
+    <Reference Include="MailKit, Version=2.4.0.0, Culture=neutral, PublicKeyToken=4e064fe7c44a8f1b, processorArchitecture=MSIL">
+      <HintPath>..\packages\MailKit.2.4.1\lib\net46\MailKit.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="MimeKit, Version=2.4.0.0, Culture=neutral, PublicKeyToken=bede1c8a46c66814, processorArchitecture=MSIL">
+      <HintPath>..\packages\MimeKit.2.4.1\lib\net46\MimeKit.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -145,6 +166,7 @@
     <Content Include="css\owl.css" />
     <Content Include="css\responsive.css" />
     <Content Include="css\style.css" />
+    <Content Include="FinishPayment.aspx" />
     <Content Include="fonts\flaticon.svg" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -161,6 +183,7 @@
     <Content Include="images\background\golden_star.jpg" />
     <Content Include="images\background\pattern-1.png" />
     <Content Include="images\background\pattern-2.jpg" />
+    <Content Include="images\background\payment.jfif" />
     <Content Include="images\background\redStar.png" />
     <Content Include="images\background\star.jpg" />
     <Content Include="images\background\w3.png" />
@@ -177,6 +200,7 @@
     <Content Include="images\category\house.jpg" />
     <Content Include="images\category\mould.jpeg" />
     <Content Include="images\category\oven.jpg" />
+    <Content Include="images\category\rug.jpg" />
     <Content Include="images\category\sofa.jpg" />
     <Content Include="images\category\vinyl.jpg" />
     <Content Include="images\clients\1.png" />
@@ -413,8 +437,11 @@
     <Content Include="AddStory.aspx" />
     <Content Include="AddNewService.aspx" />
     <Content Include="AddService.aspx" />
-    <Content Include="WebForm26.aspx" />
     <Content Include="StoryDetails.aspx" />
+    <Content Include="AddChecklist.aspx" />
+    <Content Include="IPNHandler.aspx" />
+    <Content Include="ConfirmOrder.aspx" />
+    <Content Include="Paypal.aspx" />
     <Content Include="WhyUs.aspx" />
   </ItemGroup>
   <ItemGroup>
@@ -426,6 +453,13 @@
       <DependentUpon>Admin.Master</DependentUpon>
     </Compile>
     <Compile Include="DataAccessLayer.cs" />
+    <Compile Include="FinishPayment.aspx.cs">
+      <DependentUpon>FinishPayment.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="FinishPayment.aspx.designer.cs">
+      <DependentUpon>FinishPayment.aspx</DependentUpon>
+    </Compile>
     <Compile Include="ForgotPassword.aspx.cs">
       <DependentUpon>ForgotPassword.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -623,19 +657,40 @@
     <Compile Include="AddService.aspx.designer.cs">
       <DependentUpon>AddService.aspx</DependentUpon>
     </Compile>
-    <Compile Include="WebForm26.aspx.cs">
-      <DependentUpon>WebForm26.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="WebForm26.aspx.designer.cs">
-      <DependentUpon>WebForm26.aspx</DependentUpon>
-    </Compile>
     <Compile Include="StoryDetails.aspx.cs">
       <DependentUpon>StoryDetails.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="StoryDetails.aspx.designer.cs">
       <DependentUpon>StoryDetails.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AddChecklist.aspx.cs">
+      <DependentUpon>AddChecklist.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AddChecklist.aspx.designer.cs">
+      <DependentUpon>AddChecklist.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="IPNHandler.aspx.cs">
+      <DependentUpon>IPNHandler.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="IPNHandler.aspx.designer.cs">
+      <DependentUpon>IPNHandler.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ConfirmOrder.aspx.cs">
+      <DependentUpon>ConfirmOrder.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ConfirmOrder.aspx.designer.cs">
+      <DependentUpon>ConfirmOrder.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Paypal.aspx.cs">
+      <DependentUpon>Paypal.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Paypal.aspx.designer.cs">
+      <DependentUpon>Paypal.aspx</DependentUpon>
     </Compile>
     <Compile Include="WhyUs.aspx.cs">
       <DependentUpon>WhyUs.aspx</DependentUpon>
@@ -673,6 +728,7 @@
     <None Include="Properties\PublishProfiles\CleaningApplication20190730020037 - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\SwaachCleaning - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\SwaachCleaning - Web Deploy1.pubxml" />
+    <None Include="Properties\PublishProfiles\SwaachCleaning - Web Deploy2.pubxml" />
     <None Include="Properties\PublishProfiles\SwaachCleaningServices - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
