--- a/CleaningApplication/Web.config
+++ b/CleaningApplication/Web.config
@@ -11,19 +11,29 @@
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
     <add key="StripeAPIKey" value="sk_test_pIYbtWhnmPXVPinFewqNXZ5K00VWc3dxDC"/>
+  
+  <!-- Paypal parameters -->
+    <add key="BusinessEmail" value="aastha2150@gmail.com"/>
+    <add key ="CancelUrl" value="https://default.aspx"/>
+    <add key ="ReturnUrl" value="#"/>
+    <add key="NotifyUrl" value="#"/>
+    <add key="CurrencyCode" value="NZD"/>
+    <add key="UseSandbox" value="true"/>
+    <add key="SendToReturnURL" value="false"/>
   </appSettings>
   <connectionStrings>
-    <add name="dbcleaningConnectionString" connectionString="Data Source=aago001;Initial Catalog=dbcleaning;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="dbcleaningConnectionString" connectionString="Data Source=DESKTOP-GPPUBFR\AASTHA_GOYAL;Initial Catalog=dbcleaning;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <customErrors defaultRedirect="ErrorPage.aspx" mode="Off" />
-    <compilation debug="true" targetFramework="4.6.1" />
+    <compilation debug="true" strict="false" explicit="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <pages>
       <controls>
         <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit" />
       </controls>
     </pages>
+  <authentication mode="Windows"/>
   </system.web>
   <entityFramework>
     <providers>
