Final commit - still solving the sending email issue

--- a/CleaningApplication/Web.config
+++ b/CleaningApplication/Web.config
@@ -10,16 +10,16 @@
   </configSections>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-    <add key="StripeAPIKey" value="sk_test_pIYbtWhnmPXVPinFewqNXZ5K00VWc3dxDC"/>
+    <add key="StripeAPIKey" value="sk_test_pIYbtWhnmPXVPinFewqNXZ5K00VWc3dxDC" />
   
   <!-- Paypal parameters -->
-    <add key="BusinessEmail" value="aastha2150@gmail.com"/>
-    <add key ="CancelUrl" value="https://default.aspx"/>
-    <add key ="ReturnUrl" value="#"/>
-    <add key="NotifyUrl" value="#"/>
-    <add key="CurrencyCode" value="NZD"/>
-    <add key="UseSandbox" value="true"/>
-    <add key="SendToReturnURL" value="false"/>
+    <add key="BusinessEmail" value="aastha2150@gmail.com" />
+    <add key="CancelUrl" value="https://default.aspx" />
+    <add key="ReturnUrl" value="#" />
+    <add key="NotifyUrl" value="#" />
+    <add key="CurrencyCode" value="NZD" />
+    <add key="UseSandbox" value="true" />
+    <add key="SendToReturnURL" value="false" />
   </appSettings>
   <connectionStrings>
     <add name="dbcleaningConnectionString" connectionString="Data Source=DESKTOP-GPPUBFR\AASTHA_GOYAL;Initial Catalog=dbcleaning;Integrated Security=True" providerName="System.Data.SqlClient" />
@@ -33,7 +33,7 @@
         <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit" />
       </controls>
     </pages>
-  <authentication mode="Windows"/>
+  <authentication mode="Windows" />
   </system.web>
   <entityFramework>
     <providers>
@@ -51,4 +51,12 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.1.2" newVersion="4.1.1.2" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
