Fixed the email problem

--- a/CleaningApplication/Web.config
+++ b/CleaningApplication/Web.config
@@ -11,7 +11,7 @@
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
     <add key="StripeAPIKey" value="sk_test_pIYbtWhnmPXVPinFewqNXZ5K00VWc3dxDC" />
-  
+   
   <!-- Paypal parameters -->
     <add key="BusinessEmail" value="aastha2150@gmail.com" />
     <add key="CancelUrl" value="https://default.aspx" />
@@ -60,6 +60,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="SendGrid" publicKeyToken="4f047e93159395ca" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.12.0.0" newVersion="9.12.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
