--- a/CleaningApplication/packages.config
+++ b/CleaningApplication/packages.config
@@ -8,17 +8,45 @@
   <package id="EntityFramework" version="6.3.0-preview7-19363-02" targetFramework="net461" />
   <package id="HtmlAgilityPack" version="1.11.15" targetFramework="net461" />
   <package id="MailKit" version="2.4.1" targetFramework="net461" />
+  <package id="Microsoft.Azure.WebJobs" version="3.0.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.WebJobs.Core" version="3.0.0" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.EnvironmentVariables" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Hosting" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Configuration" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net461" />
   <package id="MimeKit" version="2.4.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
   <package id="RestSharp" version="105.0.1" targetFramework="net461" />
-  <package id="Sendgrid" version="9.12.0" targetFramework="net461" />
+  <package id="SendGrid" version="9.13.0" targetFramework="net461" />
   <package id="SmartFormat.NET" version="2.5.0" targetFramework="net461" />
   <package id="Stripe.net" version="28.8.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
+  <package id="System.ComponentModel.Annotations" version="4.4.0" targetFramework="net461" />
+  <package id="System.Diagnostics.TraceSource" version="4.3.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.0" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Dataflow" version="4.8.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
